# TableUnifier

./: .gitignore  CLAUDE.md  GNN_Research_Report.docx  LICENSE  README.md  SYNC.md  TableUnifier.code-workspace  _integration_test.py  data.dvc  dataset_quality_analysis.ipynb  mlflow.db  mlflow.db.dvc  output.dvc  project_config.example.json  pyproject.toml
.claude/: settings.local.json
.dvc/: config
.remember/: remember.md
docs/superpowers/plans/: 2026-03-27-v3-gat-minibatch-hdbscan.md
experiments/: 01_data_analysis.ipynb  01_data_exploration.py  02_build_graphs.py  02_graph_analysis.ipynb  02_train_er_without_sm.py  03_train_er_without_sm.py  04_er_metrics.ipynb  05_hpo.py  05_hpo_analysis.ipynb  06_real_data_test.py  06_train_final.py  06_train_final_analysis.ipynb  07_real_data_analysis.ipynb  07_real_data_test.py  08_11_v3_unified_gat_analysis.ipynb  08_build_unified_graph.py  09_train_gat.py  10_evaluate.py  11_train_gat_bce.py  12_label_analysis.ipynb  12_label_real_data.py  12_verify_labels.ipynb  13_label_with_agent.py  13_refactor_plan.md  14_build_unified_graph_mrl.py  14_mrl_no_projection_analysis.ipynb  14_train_gat_mrl.py  15_test_on_real_labels.py  15_test_on_real_labels_analysis.ipynb  16_benchmark_row_models.py  16_benchmark_row_models_analysis.ipynb  18_ga_hdbscan_bge_m3.py  18_ga_hdbscan_bge_m3_analysis.ipynb  v3_results_analysis.ipynb
experiments/06_real_data_test/: сводная_спецификация.xlsx
experiments/17/: 01_explore.ipynb  02_prepare.ipynb  03_eda.ipynb  03_eda_v2.ipynb  03_eda_v2.py  04_synth_pairs.py  05_check_natural_labels.py  05_generate_synonyms.py  06_build_views.py  07_eda_pairs.ipynb  08_eda_synonyms.ipynb  09_eda_views.ipynb  datasets.md  prepare.py
pipelines/: 01_dataset_generation.ipynb  01b_magellan_dataset.ipynb  02_schema_matching_training.ipynb  03_entity_resolution_training.ipynb  04_full_inference.ipynb  config.json
pipelines/er_models/: training_history.json
pipelines/sm_models/: label2idx.json  training_results.json
pipelines/triplet_loss/: experiment_config.json  triplet_loss_experiment.ipynb
scripts/: migrate_to_model_tag.sh  run_and_push.sh
src/table_unifier/: __init__.py  __main__.py  config.py  core.py  dataset_utils.py  ds_gen_v3.py  models.py  ollama_client.py  paths.py  visualizer.py
src/table_unifier/data_generation/: __init__.py  columns.py  config.py  generator.py  magellan_loader.py  ollama_utils.py
src/table_unifier/dataset/: data_split.py  download.py  embedding_generation.py  graph_builder.py  pair_sampling.py  schema_augmentation.py  value_corruption.py
src/table_unifier/entity_resolution/: __init__.py  config.py  er_data_generator.py  er_dataset.py  gnn_model.py  graph_builder.py  inference.py  token_embedder.py  trainer.py
src/table_unifier/evaluation/: clustering.py  ga_cc.py  ga_common.py  ga_hdbscan.py
src/table_unifier/models/: __init__.py  entity_resolution.py  gat_layer.py  gnn_layer.py  losses.py  schema_matching.py
src/table_unifier/schema_matching/: __init__.py  config.py  data_generator.py  dataset.py  inference.py  model.py  trainer.py
tests/: conftest.py  test_clustering.py  test_config.py  test_data_split.py  test_download.py  test_embedding_generation.py  test_entity_resolution_gat.py  test_entity_resolution_model.py  test_er_trainer.py  test_gat_layer.py  test_gnn_layer.py  test_losses.py  test_ollama_client.py  test_pair_sampling.py  test_pipeline_01_config.py  test_pipeline_02_schema_matching.py  test_pipeline_03_entity_resolution.py  test_pipeline_04_inference.py  test_schema_augmentation.py  test_schema_matching_model.py  test_schema_trainer.py  test_value_corruption.py
(+2 files in other folders)
