[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "table-unifier"
version = "3.0.0"
description = "Intelligent Table Schema Unification System using semantic embeddings"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Oleg Keatzin", email = "olegkeatzin@example.com"}
]
keywords = ["table", "unification", "schema", "semantic", "nlp", "embeddings", "data-integration"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "ollama>=0.1.0",
    "scikit-learn>=1.3.0",
    "scipy>=1.11.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "tqdm>=4.65.0",
    "openpyxl>=3.1.0",
    "ipykernel>=6.31.0",
    "torch>=2.8.0",
    "torchvision>=0.23.0",
    "pytorch-metric-learning>=2.9.0",
    "faiss-cpu>=1.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "isort>=5.12.0",
]
generation = [
    "faker>=18.0.0",
]
all = [
    "table-unifier[dev,generation]",
]

[project.urls]
Homepage = "https://github.com/olegkeatzin/TableUnifier"
Repository = "https://github.com/olegkeatzin/TableUnifier"
Documentation = "https://github.com/olegkeatzin/TableUnifier/blob/master/README.md"
"Bug Tracker" = "https://github.com/olegkeatzin/TableUnifier/issues"

[project.scripts]
table-unifier = "table_unifier.cli:main"

[tool.setuptools]
packages = ["table_unifier"]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
table_unifier = ["configs/*.json"]

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=table_unifier --cov-report=html --cov-report=term"
