[project]
name = "tableunifier"
version = "0.1.0"
description = "Automatic table unification with schema matching and entity resolution"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "torch>=2.2.0",
    "torch-geometric>=2.5.0",
    "transformers>=4.40.0",
    "ollama>=0.4.0",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "scikit-learn>=1.4.0",
    "tqdm>=4.66.0",
    "requests>=2.31.0",
    "torchvision>=0.25.0",
    "torchaudio>=2.10.0",
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.8",
    "optuna>=3.6.0",
    "mlflow>=2.14.0",
    "plotly>=6.6.0",
    "nbformat>=5.10.4",
    "openpyxl>=3.1.5",
    "hdbscan>=0.8.33",
    "faiss-cpu>=1.13.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/table_unifier"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
